--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.14",
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/bottom-tabs": "^6.5.19",
+    "@react-navigation/material-top-tabs": "^6.6.12",
+    "@react-navigation/native": "^6.1.16",
+    "@react-navigation/stack": "^6.3.28",
     "react": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-pager-view": "^6.2.3",
     "react-native-reanimated": "^3.8.0",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-vision-camera": "^3.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
